--- a/example1/test1.css
+++ b/example1/test1.css
@@ -1,7 +1,7 @@
 .header{
     height:230px;
     width:100%;
-    border:1px solid black;
+    border:1px solid #fff;
     margin:0 auto;  
 }
 .content{
@@ -12,7 +12,7 @@
     border:1px solid red;
     margin:0 auto; 
 }
-img{
+.logo{
     width:100px;
     height:100px;
     padding-right:15px;
@@ -72,11 +72,66 @@ a{
 a:hover{
     text-decoration:underline;
 }
-.slider{
-    width:100%;
+
+ /* Слайдер */
+.slides {
     height:400px;
-    border:1px solid black;
+    margin:0px auto;
+    position: relative;
+    width:100%;
 }
+.slides > div {
+  position: absolute;
+  width: 100%;
+  height: 400px;
+}
+.slide1 {
+  background: url(image/1.jpg);  
+  animation:fade 8s infinite;
+  -webkit-animation:fade 8s infinite;
+} 
+.slide2 {
+  background: url(image/2.jpg);
+  animation:fade2 8s infinite;
+  -webkit-animation:fade2 8s infinite;
+}
+.slide3 {
+  background: url(image/3.jpg);
+  animation:fade3 8s infinite;
+  -webkit-animation:fade3 8s infinite;
+}
+@keyframes fade
+{
+  0%   {opacity:1}
+  33.333% { opacity: 0}
+  66.666% { opacity: 0}
+  100% { opacity: 1}
+}
+@keyframes fade2
+{
+  0%   {opacity:0}
+  33.333% { opacity: 1}
+  66.666% { opacity: 0 }
+  100% { opacity: 0}
+}
+@keyframes fade3
+{
+  0%   {opacity:0}
+  33.333% { opacity: 0}
+  66.666% { opacity: 1}
+  100% { opacity: 0}
+}
+
+
+ 
+
+
+
+
+
+
+
+
 
 
 
@@ -90,5 +145,3 @@ a:hover{
         url('font/Forum.woff') format('woff');
   
 }
-
-
