--- a/example1/test1.css
+++ b/example1/test1.css
@@ -1,79 +1,79 @@
 .header{
-    height:230px;
-    width:100%;
-    border:1px solid #fff;
-    margin:0 auto;  
+    height: 230px;
+    width: 100%;
+    border: 1px solid #fff;
+    margin: 0 auto;  
 }
 .content{
-    width:980px;
-    height:230px;
-    padding-left:10px;
-    padding-right:10px;
-    border:1px solid red;
-    margin:0 auto; 
+    width: 980px;
+    height: 230px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border: 1px solid red;
+    margin: 0 auto; 
 }
 .logo{
-    width:100px;
-    height:100px;
-    padding-right:15px;
-    float:left;
+    width: 100px;
+    height: 100px;
+    padding-right: 15px;
+    float: left;
 }
 .right{
-    position:relative;
-    left:730px;
-    top:-65px;
-    width:250px;
+    position: relative;
+    left: 730px;
+    top: -65px;
+    width: 250px;
     text-align: right;
-    border:1px solid #fff;
+    border: 1px solid #fff;
 }
 .left{
-    width:350px;
-    position:relative;
-    top:65px;
-    border:1px solid #fff;
+    width: 350px;
+    position: relative;
+    top: 65px;
+    border: 1px solid #fff;
 }
 .tel{
     font-family: Forum-Regular, Verdana, sans-serif;
-    font-size:25px; 
+    font-size: 25px; 
 }
 #feedback{
-    color:black;
-    font-size:20px;
-    text-decoration:none;
-    border-bottom:1px dashed #000;
+    color: black;
+    font-size: 20px;
+    text-decoration: none;
+    border-bottom: 1px dashed #000;
 }
 .navigation{
-    background-color:#444444;
-    height:80px;
-    width:100%;
-    margin:0 auto;
-    color:#fff;
+    background-color: #444444;
+    height: 80px;
+    width: 100%;
+    margin: 0 auto;
+    color: #fff;
 }
 .navigationContent{
-    width:980px;
+    width: 980px;
     font-family: "PT Sans";
     font-size: 30px;
     line-height: 80px;
     text-align: center;
-    margin:0 auto;   
+    margin: 0 auto;   
 }
 .navigationContent>a{
-    color:#fff;
+    color: #fff;
     text-decoration: none;
-    margin:9px;
-    padding-right:18px;
-    border-right:3px solid #fff;
+    margin: 9px;
+    padding-right: 18px;
+    border-right: 3px solid #fff;
 }
 .navigationContent>a:hover{
-    text-decoration:underline;
+    text-decoration: underline;
 }
 
  /* Слайдер */
 .slides {
-    height:400px;
-    margin:0px auto;
+    height: 400px;
+    margin: 0px auto;
     position: relative;
-    width:100%;
+    width: 100%;
 }
 .slides > div {
   position: absolute;
@@ -82,18 +82,18 @@
 }
 .slide1 {
   background: url(image/1.jpg);  
-  animation:fade 8s infinite;
-  -webkit-animation:fade 8s infinite;
+  animation: fade 8s infinite;
+  -webkit-animation: fade 8s infinite;
 } 
 .slide2 {
   background: url(image/2.jpg);
-  animation:fade2 8s infinite;
-  -webkit-animation:fade2 8s infinite;
+  animation: fade2 8s infinite;
+  -webkit-animation: fade2 8s infinite;
 }
 .slide3 {
   background: url(image/3.jpg);
-  animation:fade3 8s infinite;
-  -webkit-animation:fade3 8s infinite;
+  animation: fade3 8s infinite;
+  -webkit-animation: fade3 8s infinite;
 }
 @keyframes fade
 {
@@ -118,108 +118,183 @@
 }
 /* Каталог */
 .link>a{
-    color:black;
-    font-family:"PT Sans";
-    font-size:14px;
-    text-decoration:underline;
+    color: black;
+    font-family: "PT Sans";
+    font-size: 14px;
+    text-decoration: underline;
     letter-spacing: 0.35px;
-    margin:1px;
-    padding-right:3px;
+    margin: 1px;
+    padding-right: 3px;
     font-weight: 400;
     line-height: 18px;
     
 }
 .link>a:hover{
-    text-decoration:none;
+    text-decoration: none;
 }
 .link{
-    width:250px;
-    height:14px;   
+    width: 250px;
+    height: 14px;   
 }
 .catalog{
-    height:1380px;
-    width:980px;
-    padding-left:10px;
-    padding-right:10px;
-    border:1px solid red;
-    margin:0px auto;
-    position:relative;
+    height: 1380px;
+    width: 980px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border: 1px solid red;
+    margin: 0px auto;
+    position: relative;
 }
 .leftblock{
-    border:1px solid green;
-    width:200px;
-    height:1133px;
-    margin-top:25px; 
+    border: 1px solid green;
+    width: 200px;
+    height: 1335px;
+    margin-top: 25px; 
 }
 .centerblock{
-    border:1px solid blue;
-    width:790px;
-    height:1133px; 
-    margin-top:25px;
-    position:absolute;
-    top:15px;
-    left:210px;
+    border: 1px solid blue;
+    width: 790px;
+    height: 1335px; 
+    margin-top: 25px;
+    position: absolute;
+    top: 15px;
+    left: 210px;
 }
 ul{
     list-style: none;
-    margin-left:-20px;
-    color:#767676;
+    margin-left: -20px;
+    color: #767676;
 }
 .linkLeft{
     text-decoration: none;
-    color:#000;
-    font-size:18px;
-    font-weight:400;
-    font-family:"PT Sans";
+    color: #000;
+    font-size: 18px;
+    font-weight: 400;
+    font-family: "PT Sans";
     letter-spacing: 0.45px;
     line-height: 30px;
 }
 .linkLeft:hover{
-    text-decoration:underline;
+    text-decoration: underline;
 }
 .second>li{
     list-style: disc;
-    font-size:14px;
-    letter-spacing:0.35px;
-    line-height:22px;
+    font-size: 14px;
+    letter-spacing: 0.35px;
+    line-height: 22px;
 }
 .second>li>a{
-    text-decoration:none;
-    color:black; 
+    text-decoration: none;
+    color: black; 
 }
 .second>li>a:hover{
     text-decoration: underline;
 }
 .priсe{
-    width:160px;
-    height:150px;
-    margin:110px auto;
-    padding:0px;
+    width: 160px;
+    height: 150px;
+    margin: 110px auto;
+    padding: 0px;
 }
 .excel{
-    width:100px;
-    height:100px;
-    margin-top:0px;
-    margin-left:25px;
+    width: 100px;
+    height: 100px;
+    margin-top: 0px;
+    margin-left: 25px;
 }
 .price-list{
-    font-size:30px;
-    color:#000;
+    font-size: 30px;
+    color: #000;
     font-family: "PT Sans";
-    font-weight:700;
+    font-weight: 700;
     line-height: 25px;
 }
 .article>div{
-    width:250px;
-    height:380px;
-    background-color:#f0eded;
-    margin-right:10px;
-    margin-top:15px;
-    display:inline-block;
-    
+    width: 250px;
+    height: 380px;
+    background-color: #d9d7d7;
+    margin-right: 10px;
+    display: inline-block;  
 }
-
-
+.nophoto{
+    width: 210px;
+    height: 210px;
+    margin: 20px 0 0 20px;
+}
+.article>div>p{
+    font-family: "PS Sans";
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 0.45px;
+    margin-left: 20px;
+}
+.article>div>h4{
+    font-family: "PS Sans";
+    font-size: 28px;
+    font-weight: 700px;
+    letter-spacing: 0.7px;
+    width: 103px;
+    height: 26px;
+    margin-left: 20px;
+}
+.Shopping_Cart{
+    width: 28px;
+    height: 21px;
+    position: relative;
+    left: 190px;
+    top: -60px; 
+}
+.pagination{
+    position: relative;
+    left: 300px;
+    top: -20px;
+    width: 210px;
+    height: 45px;
+    line-height: 45px; 
+}
+.pagination>div{
+    display: inline; 
+}
+.pagination>div>a{
+    text-decoration: none;
+    font-family: "PT Sans";
+    font-size: 14px;
+    font-weight: 400;
+    letter-spacing: 17px;
+    color: #000; 
+    transition: all 0.2s ease;
+    -webkit-transition: all 0.2s ease;
+    -moz-transition: all 0.2s ease;
+    -o-transition: all 0.2s ease;
+    -ms-transition: all 0.2s ease;
+}
+.pagination>div>a:hover{
+    font-size: 18px;  
+}
+.text{
+    width: 790px;
+    height: 440px;
+    border-top: 1px solid black;
+    column-count: 2;
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-gap: normal;
+    -moz-column-gap: normal;
+    column-gap: normal;
+    column-width: 370px;
+    -webkit-column-width: 370px;
+    -moz-column-width: 370px;
+    margin-top: 30px;
+}
+.text>p{
+    font-family: "PS Sans";
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0.45px;
+    margin-top: 20px;
+}
 
 
 
