--- a/example1/test1.css
+++ b/example1/test1.css
@@ -9,7 +9,7 @@
     height: 230px;
     padding-left: 10px;
     padding-right: 10px;
-    border: 1px solid red;
+    border: 1px solid #fff;
     margin: 0 auto; 
 }
 .logo{
@@ -141,18 +141,18 @@
     width: 980px;
     padding-left: 10px;
     padding-right: 10px;
-    border: 1px solid red;
+    border: 1px solid #fff;
     margin: 0px auto;
     position: relative;
 }
 .leftblock{
-    border: 1px solid green;
+    border: 1px solid #fff;
     width: 200px;
     height: 1335px;
     margin-top: 25px; 
 }
 .centerblock{
-    border: 1px solid blue;
+    border: 1px solid #fff;
     width: 790px;
     height: 1335px; 
     margin-top: 25px;
@@ -295,11 +295,69 @@ ul{
     letter-spacing: 0.45px;
     margin-top: 20px;
 }
-
-
-
-
-
+.footer{
+    width: auto;
+    height: 220px;
+    background-color: dimgray;
+    margin-bottom: 0px;
+    margin: auto auto;
+    padding-left: 25px;
+    padding-right: 10px;
+    padding-top: 30px;
+}
+.company_footer{
+    width: 200px;
+    height: 40px;
+    font-family: "PS Sans";
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0.35px;
+    color: #fff;
+    padding-top: 0px;
+    position:relative;
+    left:250px;
+}
+.link_footer{
+    width: 120px;
+    height: 120px;
+    line-height: 26px;
+    position: relative;
+    left: 570px;
+    top: -40px;
+}
+.link_footer>a{
+    color: #fff;
+    font-family: "PS Sans";
+    font-size: 14px;
+    font-weight: 400;
+    text-decoration: underline;
+    letter-spacing: 0.35px;
+    display: block;
+}
+.pixel_footer{
+    width: 220px;
+    height: 50px;
+    position: relative;
+    top: -150px;
+    left: 1000px;     
+}
+.pixel_footer>a{
+    font-family: "PT Sans";
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0.35px;
+    letter-spacing: 0.35px;
+    color: #fff;
+    text-decoration: none; 
+}
+span{text-decoration: underline;}
+.pixel_footer>img{
+    width: 41px;
+    height: 41px;
+    float: left;
+}
 
 
 
