--- a/example1/test1.css
+++ b/example1/test1.css
@@ -64,7 +64,7 @@ header{
     line-height: 45px;
     letter-spacing: 1px; 
 }
-#feedback{
+.open_modal{
     color: black;
     text-decoration: none;
     width: 171px;
@@ -476,6 +476,82 @@ span{text-decoration: underline;}
     height: 41px;
     float: left;
 }
+/*обратная связь*/
+.legend{
+    font-size: 24px;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 25px;
+    margin-left:-6px;
+}
+#grey{
+    background-color: #eeeeee;
+    width: 468px;
+    height: 580px;
+    position:fixed;
+    top:285px;
+    left:540px;
+    z-index: 2000;
+    font-family: "PT Sans";
+    font-size: 14px;
+    font-weight: 400;
+    text-align: center; 
+    display:none;
+
+}
+#close{
+    width: 25px;
+    height: 25px;
+    background-color: #eeeeee;
+    color: #000;
+    position:relative;
+    z-index: 2103;
+    left:460px;
+    top:0px;
+    left:225px;
+    font-size: 18px;
+    cursor:pointer;
+}
+.input_text{
+    height:40px;
+    width:340px;
+    margin-bottom: 15px;
+}
+.red{
+    font-style: italic;
+    border:1px solid #dc7f7f;
+    box-shadow: inset 0 0 15px #dc7f7f;
+     margin-bottom: 20px;
+}
+.sms{
+    min-height: 140px;
+    width: 340px; 
+}
+.submit{
+    width: 128px;
+    height: 43px;
+    color: #ffffff;
+    font-family: "PT Sans";
+    font-size: 18px;
+    font-weight: 700;
+    text-transform: uppercase;
+    border: 1px solid #ffffff;
+    margin-top:20px;
+}
+#fade {
+    display: none;
+    background: #2c3e50;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: .50;
+    z-index: 1000;
+}
+html>#fade {
+        position: absolute;
+    }
 
 
 @font-face {
