--- a/example1/test1.css
+++ b/example1/test1.css
@@ -99,7 +99,7 @@ nav{
 }
 .navigationContent>li{display:inline;}
 .navigationContent>li>a{
-    color:#fff;
+    color: #fff;
     font-weight: 400;
     letter-spacing: 0.75px;
     text-decoration: none;
@@ -107,105 +107,53 @@ nav{
     padding-right: 13px;
 }
 .navigationContent>li>a:hover{text-decoration: underline;}
- /* Слайдер */
-.slides {
-    height: 400px;
-    margin: 0px auto;
-    position: relative;
-    width: 100%;
-}
-.parent_slaide{
-    position:relative;
-    margin:0 auto;
-    width:1400px;
-    height:400px;
-    padding:0px;
-}
-.slide1,.slide2,.slide3 {
-    position: absolute;
-    width:1400px;
-    height: 400px;
-     overflow-y:hidden;
-}
 
-.clear{
+#slider-wrap{ /* Оболочка слайдера и кнопок */
+    width: 100%;
+    margin: 0 auto;
+    }
+#slider{ /* Оболочка слайдера */
+    width: 1400px;
+    height: 400px;
+    overflow: hidden;
+    position: relative;
+    margin: 0 auto;
+}
+.slide{ /* Слайд */
+    width: 100%;
+    height: 100%;
+    overflow-y: hidden;
+    }
+#prewbutton, #nextbutton{ 
+    display: block;
+    width: 100%;
+    height: 100%;
     position: absolute;
-    width:1400px;
-    height: 400px;    
-    z-index: 1; 
+    top: -15px;
+    overflow: hidden;
+    background: url(image/left.png) left center no-repeat;
+    opacity: 0.8;
+    z-index: 3;
+    }
+#prewbutton{left: 207px;}
+#nextbutton{
+    right: 235px;
+    background: url(image/right.png) right center no-repeat;
 }
-.show{
-   position: absolute;
-    width:1400px;
-    height: 400px;    
-    z-index: 3; 
-}
-.size_picture{
-    width:1400px;
-    height:400px;
-}
-.slide1 {
-  background: url(image/1.jpg);  
-  animation: fade 16s infinite;
-  -webkit-animation: fade 16s infinite;
-} 
-.slide2 {   
-  background: url(image/2.jpg);
-  animation: fade2 16s infinite;
-  -webkit-animation: fade2 16s infinite;
-}
-.slide3 {    
-  background: url(image/3.jpg);
-  animation: fade3 16s infinite;
-  -webkit-animation: fade3 16s infinite;
-}
-@keyframes fade
-{
-  0%   {opacity:1}
-  33.333% { opacity: 0}
-  66.666% { opacity: 0}
-  100% { opacity: 1}
-}
-@keyframes fade2
-{
-  0%   {opacity:0}
-  33.333% { opacity: 1}
-  66.666% { opacity: 0 }
-  100% { opacity: 0}
-}
-@keyframes fade3
-{
-  0%   {opacity:0}
-  33.333% { opacity: 0}
-  66.666% { opacity: 1}
-  100% { opacity: 0}
-}
-.direction{
-    width:980px;
-    margin:150px auto;
-}
-#direction_left{
-    position: relative;
-    padding:0;
-    z-index: 4;
-}
-#direction_right{
-    position: relative;
-    left:880px;
-    padding:0;
-    z-index: 4;
+#prewbutton:hover, #nextbutton:hover{
+    opacity: 1;
 }
 /* Каталог */
 .menu{
     width: 290px;
-    margin:0 left;
+    margin: 0 auto;
 }
 .link{
     width: 290px;
     list-style: none;
     display:inline-block;
     padding: 3px;
-    margin-top:0px;
+    margin-top: 0px;
 }
 .link>li{
     display: inline;
@@ -229,21 +177,21 @@ section{
     margin: 0px auto; 
 }
 .big{
-    display:flex;
+    display: flex;
 }
 aside{
     width: 200px;     
 }
 .centerBlock{
     width: 780px;
-    margin:5px 0 0 0;
-    padding:0px;
-    font-size:0;
+    margin: 5px 0 0 0;
+    padding: 0px;
+    font-size: 0;
 }
 aside>ul{
     list-style: none;
     padding: 0px;
-    margin-top:0px;
+    margin-top: 0px;
     color: #767676;
 }
 .linkLeft{
@@ -272,12 +220,12 @@ aside>ul{
     font-size: 14px;
     letter-spacing: 0.35px;
     line-height: 22px;
-    margin-left:-23px;
+    margin-left: -23px;
 }
 .second>li>a{
     text-decoration: none;
     color: black;
-    margin-left:-1px;
+    margin-left: -1px;
 }
 .second>li>a:hover{
     text-decoration: underline;
@@ -381,8 +329,7 @@ p.cost{
     -moz-transition: all 0.2s ease;
     -o-transition: all 0.2s ease;
     -ms-transition: all 0.2s ease;
-    line-height: 30px;  
-   
+    line-height: 30px;   
 }
 .pagination>li>a:hover{
     font-size: 18px;     
@@ -416,7 +363,7 @@ footer{
 }
 .block_footer{
     width:980px;
-    padding:0px 10ppx 0px 10px;
+    padding:0px 10px 0px 10px;
     margin:0px auto;
     overflow-y:hidden;
 }
@@ -482,50 +429,50 @@ span{text-decoration: underline;}
     font-weight: 700;
     margin-top: 5px;
     margin-bottom: 25px;
-    margin-left:-6px;
+    margin-left: -6px;
 }
 #grey{
     background-color: #eeeeee;
     width: 468px;
     height: 580px;
-    position:fixed;
-    top:285px;
-    left:540px;
+    position: fixed;
+    top: 285px;
+    left: 540px;
     z-index: 2000;
     font-family: "PT Sans";
     font-size: 14px;
     font-weight: 400;
     text-align: center; 
-    display:none;
-
+    display: none;
 }
 #close{
     width: 25px;
     height: 25px;
     background-color: #eeeeee;
     color: #000;
-    position:relative;
+    position: relative;
     z-index: 2103;
-    left:460px;
-    top:0px;
-    left:225px;
+    left: 460px;
+    top: 0px;
+    left: 225px;
     font-size: 18px;
     cursor:pointer;
 }
 .input_text{
-    height:40px;
-    width:340px;
+    height: 40px;
+    width: 340px;
     margin-bottom: 15px;
 }
 .red{
     font-style: italic;
-    border:1px solid #dc7f7f;
+    border: 1px solid #dc7f7f;
     box-shadow: inset 0 0 15px #dc7f7f;
      margin-bottom: 20px;
 }
 .sms{
     min-height: 140px;
-    width: 340px; 
+    width: 340px;
+    resize: none;
 }
 .submit{
     width: 128px;
@@ -536,7 +483,7 @@ span{text-decoration: underline;}
     font-weight: 700;
     text-transform: uppercase;
     border: 1px solid #ffffff;
-    margin-top:20px;
+    margin-top:20px;  
 }
 #fade {
     display: none;
@@ -552,6 +499,9 @@ span{text-decoration: underline;}
 html>#fade {
         position: absolute;
     }
+html>body>header>#grey{
+    position: absolute;
+}
 
 
 @font-face {
